# physical-ai-textbook

./: .gitignore  CLAUDE.md  README.md  THEME_CUSTOMIZATION.md  Update-TextbookHistory.ps1  docusaurus.config.ts  package-lock.json  package.json  update-textbook-history.sh  vercel.json
.claude/: settings.local.json
blog/: 2025-01-01-about-the-author.md  tags.yml
docs/: intro.md  module-0-intro.md  module-1-nodes-lifecycle.md  module-2-sensor-simulation.md  module-2-virtual-testing.md  module-3-complete-system.md  module-3-control-systems.md  module-3-hardware-acceleration.md  module-4-exercises-assignments.md  module-4-language-understanding.md  module-4-multimodal-perception.md  module-4-technical-verification.md  module-4-vla-applications.md  module-4-vla-integration.md  module-5-integration-humanoid-control.md  textbook-history.md
frontend/: docusaurus.config.ts  index.html  package-lock.json  package.json  sidebars.ts  vercel.json
frontend/blog/: 2025-01-01-about-the-author.md  authors.yml  tags.yml
frontend/docs/: module-1-ros2-architecture.md  module-1-topics-message-passing.md  module-2-digital-twin-concepts.md  module-2-unity-simulation.md  module-3-deployment-scenarios.md  module-3-isaac-overview.md  module-3-perception-systems.md  module-3-sim-integration.md  module-4-vla-fundamentals.md  navigation-guide.md
physical-ai-book/: module-1-ros2.md  module-2-digital-twin.md
spec4_backend/: __init__.py  agent_bridge.py  api.py  debug_test.py  logger.py  pyproject.toml  test_api.py  test_client.py
spec4_backend/tests/: __init__.py
src/css/: custom.css
(+91 files in other folders)
